--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Welcome To CSE</h1>
     <p>good girl</p>
+    <p>friendship, a state of enduring affection, esteem, intimacy, and trust between two people. ... 
+        It is recognized by both members of the relationship and is characterized by a bond or tie of reciprocated affection.</p>
 </body>
 </html>
