--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>good girl</p>
     <p>friendship, a state of enduring affection, esteem, intimacy, and trust between two people. ... 
         It is recognized by both members of the relationship and is characterized by a bond or tie of reciprocated affection.</p>
+    <p> Friendship is one of the powerfull in the World. </p> 
 </body>
 </html>
